[package]
name = "chroma-dbg"
version = "0.2.1"
edition = "2021"
description = "Put your primate brain's pattern recognition to use with syntax highlighting for the standard Debug trait"
authors = ["cohaereo <cohae@cohae.dev>"]
repository = "https://github.com/cohaereo/chroma-dbg"
license = "MIT"
readme = "README.md"
categories = ["development-tools", "value-formatting", "parsing"]
keywords = [
    "debug",
    "color",
    "formatting",
    "syntax-highlighting",
    "pretty-printing",
]
include = ["**/*.rs", "**/*.pest", "Cargo.toml"]

[dependencies]
anstyle = "1.0.10"
pest = "2.7.15"
pest_derive = "2.7.15"

[dev-dependencies]
bitflags = "2.9.3"
